projetGL/src/test/deca/context/invalid/provided/invalide_03_addition_str.deca
// Description Affectation et typage
// affectation string <- float
// Resultat : 
// ERROR


{
    string char = "Deca World";

    int a = 2003;

    char = char + a;
    
}